# vk_task

./: .env  .gitignore  Dockerfile  README.md  a  docker-compose.yml  main.py  pyproject.toml  requiremments.txt
fastapi_server/: .env  Dockerfile  alembic.ini  pyproject.toml
fastapi_server/alembic/: env.py
fastapi_server/alembic/versions/: 18dd222bd908_create_products_table.py  2024_05_05_1237-52f73fbfdf26_create_users_and_projects.py  21d6d6c7f26b_create_products_and_users_tables.py  4f560472548e_create_posts_table.py  de10807791a9_create_products_tablee.py
fastapi_server/app/: main.py
fastapi_server/app/api_v1/: __init__.py
fastapi_server/app/api_v1/jwt_auth/: helpers.py  jwt_auth.py  validation.py
fastapi_server/app/api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
fastapi_server/app/api_v1/projects/: crud.py  dependencies.py  schemas.py  views.py
fastapi_server/app/auth/: utils.py
fastapi_server/app/core/: app_settings.py  config.py  helpers.py
fastapi_server/app/core/models/: __init__.py  base.py  post.py  project.py  user.py
fastapi_server/app/db/: __init__.py  db_session.py
fastapi_server/app/db/models/: __init__.py  product.py
fastapi_server/app/users/: crud.py  dependencies.py  schemas.py  views.py
fastapi_server/db/: db_session.py
service/: manage.py
service/api/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
service/api/migrations/: 0001_initial.py  0002_auto_20230510_1456.py
service/api_friends/: asgi.py  settings.py  wsgi.py
